@startuml domain_analysis

entity BankAccount {
  - label : String
  - bic : String
  - iban : String
  - ownerFirstName : String
  - ownerLastName : String
}

entity Bill {
  - label : String
  - content : String
}

note right of Bill
content format : "pizza:4.99/cold drink:2.00/ticket:14.99"
endnote


entity Notification {
  - label : String
  - message : String
  - dateCreated : Timestamp
}

entity SplitNotification {
    - label : String
    - message : String
    - splitCode : String
    - dateCreated : Timestamp
}

entity FriendGroup {
  - label : String
}

entity CreditCard {
  - number : String
  - cardName : String
  - date : String
  - cvv : String
}

entity NormalUser {
    - email : String
    - phone : String
    - nickname : String
    - password : String
    - balance : Float
    - firstName: String
    - lastName: String
}

entity StoreOwner {
    - email : String
    - phone : String
    - nickname : String
    - password : String
    - balance : Float
    - companyName : String
    - address : String
}

package transaction <<Folder>> {

    entity SplitTransaction{
        - amount : Float
        - participants : String
        - dateCreated : Date
        - sender_fk : NormalUser
        - receiver_fk : StoreOwner
    }

    note right of SplitTransaction
    participants format : "name1/name2/..."
    endnote

    entity UserToUserTransaction {
        - amount : Float
        - dateCreated : Date
        - sender_fk : NormalUser
        - receiver_fk : NormalUser
        }


    entity UserToBankAccount {
        - amount : Float
        - dateCreated : Date
        - sender_fk : NormalUser
        - receiver_fk : BankAccount
    }

    entity CreditCardToUserTransaction{
        - amount : Float
        - dateCreated : Date
        - sender_fk : CreditCard
        - receiver_fk : User
    }

    entity StoreOwnerToBankAccount {
        - amount : Float
        - dateCreated : Date
        - sender_fk : StoreOwner
        - receiver_fk : BankAccount
    }
}

entity Relation_FriendGroup_User{

}

entity Friends {
    - adder_normal_user_fk : NormalUser
    - added_normal_user_fk : NormalUser
}

entity Relation_StoreOwner_BankAccount {}
entity Relation_NormalUser_BankAccount {}

Relation_StoreOwner_BankAccount --> StoreOwner
Relation_StoreOwner_BankAccount --> BankAccount

Relation_NormalUser_BankAccount --> NormalUser
Relation_NormalUser_BankAccount --> BankAccount

Relation_FriendGroup_User --> FriendGroup
Relation_FriendGroup_User --> NormalUser

NormalUser <-up- Notification
NormalUser <--  SplitNotification
NormalUser <-up- CreditCard

Friends -> NormalUser
Friends -> NormalUser


FriendGroup -->  NormalUser
StoreOwner  <-- Bill

@enduml